@@ -9,6 +9,7 @@ Changed in ATK 5.5.1
 + Added atkMessageQueue for user notification messages, which can be shown
   via the atkmessages plugin. [Patrick]
 + Added atkCalculatorAttribute for adding columns with calculated values. [Ivo]
++ Added atkShuttleRelation. [Ivo]
 + Added setText method to atkLanguage. [Sandy]
 + Added fetchvalues method to atkBoolRelation, it now returns 0 if nothing
   is checked instead of NULL (The atkOrgRec also gives 0). [Sandy]
